# study-buddy

./: CLAUDE.md  LICENSE  pyproject.toml
study/: cli.py  config.py  git_ops.py  models.py  renderer.py  repl.py  session.py  tools.py  vault.py
study/connectors/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
tests/: conftest.py  test_eval.py  test_vault.py
