[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "study-buddy"
version = "0.1.0"
description = "CLI REPL study companion with Obsidian vault memory and Socratic dialogue"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "questionary>=2.0",
    "pdfplumber>=0.10",
    "ollama>=0.3",
    "httpx>=0.25",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "gitpython>=3.1",
]

[project.scripts]
study = "study.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["study"]
